<resources>
    <string name="app_name">carPark</string>
    <string name="box_one">ว่าง</string>
    <string name="id_car_string">ทะเบียน</string>
    <string name="id_car_textEdit">ทะเบียน</string>
    <string name="model_text_edit">รุ่น</string>
    <string name="update_button">UPDATE</string>
    <string name="delete_button">DELETE</string>
    <string name="name_text_edit">ชื่อ</string>
    <string name="box_one_string"></string>
    <string name="box_two_string"></string>
    <string name="box_three_string"></string>
    <string name="id_car_text_view" />
    <string name="model_text_view" />
    <string name="name_text" />
    <string name="slot_id_text">slot :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_edit_text" />
    <string name="username_hint">Username</string>
    <string name="password_edit_text" />
    <string name="password_hint">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="error_text" />
    <string name="you_info">Your Info</string>
    <string name="id_info_text">รหัสนิสิต :   59160575</string>
    <string name="name_info_text">ื่ชื่อ  :  นายนิติพล</string>
    <string name="surname_info_text">นามสกุล :  ชิงธงไชย</string>
    <string name="nickname_info">ชื่อเล่น : อาร์ม</string>
    <string name="info">info</string>

</resources>
