<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/box_one"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:id="@+id/box_one" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" android:textAlignment="center" android:background="#8BC34A"
            android:textSize="@dimen/box_text_size" android:textColor="@android:color/white"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/box_two"/>
    <TextView
            android:text="@string/box_one"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:id="@+id/box_two" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="152dp" android:textAlignment="center" android:background="#8BC34A"
            android:textSize="@dimen/box_text_size" android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/box_one" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/box_three"/>
    <TextView
            android:text="@string/box_one"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:id="@+id/box_three" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="276dp" android:textAlignment="center" android:background="#8BC34A"
            android:textSize="@dimen/box_text_size" android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/box_two" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/id_car"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/box_two" android:hint="@string/id_car_textEdit"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/model"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/id_car" android:hint="@string/model_text_edit"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText4" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/model" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp" android:hint="@string/name_text_edit"/>
    <Button
            android:text="@string/update_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/update_button"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/delete_button" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/editText4" android:layout_marginStart="30dp"
            android:background="@android:color/holo_blue_dark"/>
    <Button
            android:text="@string/delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/delete_button"
            app:layout_constraintStart_toEndOf="@+id/update_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/editText4" android:layout_marginEnd="30dp"
            android:background="@color/colorAccent"/>


</androidx.constraintlayout.widget.ConstraintLayout>