<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".CarParkFragment">

        <!-- TODO: Update blank fragment layout -->
        <data>
            <variable
                    name="carModel"
                    type="buu.informatics.s59160575.carpark.CarModel" />
        </data>

        <androidx.constraintlayout.widget.ConstraintLayout

                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray">

            <TextView
                    android:id="@+id/box_one"
                    android:layout_width="@dimen/box_size"
                    android:layout_height="@dimen/box_size"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:background="#8BC34A"
                    android:text="@string/box_one"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/box_text_size"
                    app:layout_constraintEnd_toStartOf="@+id/box_two"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/box_two"
                    android:layout_width="@dimen/box_size"
                    android:layout_height="@dimen/box_size"
                    android:layout_marginStart="152dp"
                    android:layout_marginTop="28dp"
                    android:background="#8BC34A"
                    android:text="@string/box_one"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/box_text_size"
                    app:layout_constraintEnd_toStartOf="@+id/box_three"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/box_one"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/box_three"
                    android:layout_width="@dimen/box_size"
                    android:layout_height="@dimen/box_size"
                    android:layout_marginStart="276dp"
                    android:layout_marginTop="28dp"
                    android:background="#8BC34A"
                    android:text="@string/box_one"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/box_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/box_two"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_object"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/box_two"
                    app:layout_constraintVertical_bias="0.48">

                <Button
                        android:id="@+id/update_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="300dp"
                        android:background="@android:color/holo_blue_dark"
                        android:text="@string/update_button" />

                <EditText
                        android:id="@+id/model_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="130dp"
                        android:layout_marginEnd="30dp"
                        android:ems="10"
                        android:hint="@string/model_text_edit"
                        android:inputType="textPersonName" />

                <EditText
                        android:id="@+id/idcar_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="200dp"
                        android:layout_marginEnd="30dp"
                        android:ems="10"
                        android:hint="@string/id_car_textEdit"
                        android:inputType="textPersonName" />

                <EditText
                        android:id="@+id/name_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginEnd="30dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/name_text_edit"
                        android:inputType="textPersonName" />

                <Button
                        android:id="@+id/delete_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="200dp"
                        android:layout_marginTop="300dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="40dp"
                        android:background="@color/colorAccent"
                        android:text="@string/delete_button" />

                <TextView
                        android:id="@+id/slot_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:text="@string/slot_id_text" />

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
